--- a/example/course-resources/fork/level-data/intro-open-repository-index.yaml
+++ b/example/course-resources/fork/level-data/intro-open-repository-index.yaml
@@ -29,6 +29,13 @@ asset_index:
       不宜妄自菲薄，引喻失義，以塞忠諫之路也。
       宮中府中，俱為一體，陟罰臧否，不宜異同。
       若有作姦犯科，及為忠善者，宜付有司，論其刑賞，以昭陛下平明之治，不宜篇私，使內外異法也。 
+    
+    msg-1: "第 1 號提交"
+    msg-2: "第 2 號提交"
+    msg-3: "第 3 號提交"
+    msg-4: "第 4 號提交"
+    msg-5: "第 5 號提交"
+    msg-6: "第 6 號提交"
       
 # course content
     introduce-goal: |+2
