Update course content

--- a/example/course-resources/fork/level-data/meaning-of-checkout-commit-index.yaml
+++ b/example/course-resources/fork/level-data/meaning-of-checkout-commit-index.yaml
@@ -42,19 +42,20 @@ asset_index:
 
       首先發生的是圖(二-1)所描述的事情  
       因為我們想要切換版本到紅色的版本，${{t/head}}率先被挪動到對應的位置上面  
-      這個時候，我們會發現${{t/work-tree}}以及${{t/index}}和${{t/head}}所代表的資料夾顏色就不同了  
+      代表${{t/head}}的${{t/file-tree}}的資料夾也變成了對應的顏色  
+      相比之下${{t/work-tree}}以及${{t/index}}和${{t/head}}所代表的資料夾顏色和${{t/head}}的並不一樣  
       表示他們的檔案內容有差異  
 
       為了消除這之間的差異，就會發生圖(二-2)的事情  
       git 會把${{t/head}}所保存的${{t/file-tree}}放入${{t/index}}還有${{t/work-tree}}裡面  
-      如此一來，我們才能實際使用的資料夾內容(也就是${{t/work-tree}})任意的轉換成過往保存的版本  
+      如此一來，我們才能任意的轉換實際使用的資料夾內容(也就是${{t/work-tree}})變成過往保存的版本  
 
     hint-dirty-checkout: |+2
       .md
       現在我們理解了「切換版本」實際做的事情  
-      也就是重新定位${{t/head}}還有把${{t/index}}以及${{t/work-tree}}的內容更新到和${{t/head}}一致  
+      也就是重新定位${{t/head}}，還有把${{t/index}}以及${{t/work-tree}}的內容更新到和${{t/head}}一致  
 
-      當${{t/work-tree}}和${{t/index}}一致或${{t/index}}和${{t/head}}一致的時候  
+      當${{t/work-tree}}和${{t/index}}一致，或${{t/index}}和${{t/head}}一致的時候  
       我們說這是**「${{t/clean-f}}的${{t/work-tree}}」**或是**「${{t/clean}}的${{t/index}}」**  
       與「${{t/clean}}」相對的，當${{t/work-tree}}或${{t/index}}中有任何檔案新增/修改/刪除的時候  
       我們就稱作**「${{t/dirty-f}}」**  
@@ -82,7 +83,7 @@ asset_index:
 
       1. **成功**切換到「${{level-data/intro-open-repository/msg-1}}」。${{t/work-tree}}狀態變成${{t/clean}}  
       2. **成功**切換到「${{level-data/intro-open-repository/msg-1}}」。被修改的檔案保持原狀  
-      3. **無法**切換版本。${{t/work-tree}}維持${{t/dirty}}  
+      3. **無法**切換版本。${{t/work-tree}}維持${{t/dirty}}的狀態  
       4. **無法**切換版本。剛才的修改被清除  
 
       請以數字(1/2/3/4)回答  
@@ -95,12 +96,12 @@ asset_index:
       如果去翻看${{t/graph}}和${{t/file-tree}}  
       會發現我們所修改的「===read me===」在最初的${{t/revision}}(切換的目標)和最後的${{t/revision}}(切換的起點)之間，有反覆修改過幾次  
 
-      當我們以最後的${{t/revision}}為基準修改了這個檔案，然後又想要切換到最初的${{t/revision}}時  
+      當我們切換版本時  
       git 就必須要把這份檔案還原為最初的${{t/revision}}中的內容  
       如果它這樣做，就表示我們的修改會**消失**  
 
       因為 git 是被設計來保存工作進度的  
-      如果在 git 的操作過程中，反而造成我們的修改突然消失，會很諷刺的違背了它的設計目的  
+      如果在的操作過程中，反而造成我們的修改突然消失，就很諷刺的違背了它的設計目的  
       所以， git 在遇到這樣的情況時，會無法完成切換版本的操作  
       從而確保我們的修改不會消失  
 
