--- a/example/course-resources/fork/images-index.yaml
+++ b/example/course-resources/fork/images-index.yaml
@@ -81,10 +81,10 @@ asset_index:
     illustrate-checkout-step-two: meaning-of-checkout-commit@illustrate-checkout-step-two.png
 
 # commit-properties
-    illustrate-mark-commit-info-gui: meaning-of-checkout-commit@illustrate-mark-commit-info-gui.png
-    illustrate-commit-author-and-date: meaning-of-checkout-commit@illustrate-commit-author-and-date.png
-    instruct-invoke-repository-setting: meaning-of-checkout-commit@instruct-invoke-repository-setting.png
-    instruct-change-author: meaning-of-checkout-commit@instruct-change-author.png
-    illustrate-commit-message-display: meaning-of-checkout-commit@illustrate-commit-message-display.png
-    illustrate-hash-display: meaning-of-checkout-commit@illustrate-hash-display.png
-    illustrate-gui-search-commit: meaning-of-checkout-commit@illustrate-gui-search-commit.png
+    illustrate-mark-commit-info-gui: commit-properties@illustrate-mark-commit-info-gui.png
+    illustrate-commit-author-and-date: commit-properties@illustrate-commit-author-and-date.png
+    instruct-invoke-repository-setting: commit-properties@instruct-invoke-repository-setting.png
+    instruct-change-author: commit-properties@instruct-change-author.png
+    illustrate-commit-message-display: commit-properties@illustrate-commit-message-display.png
+    illustrate-hash-display: commit-properties@illustrate-hash-display.png
+    illustrate-gui-search-commit: commit-properties@illustrate-gui-search-commit.png
