--- a/example/course-resources/fork/levels-index.yaml
+++ b/example/course-resources/fork/levels-index.yaml
@@ -22,7 +22,8 @@ asset_index:
     main.meaning-of-checkout-commit.name: "2-7 節：切換版本的意義"
 
   # level names of section three
-    main.commit-properties.name: "3-1 節：總覽版本資料"
+    main.commit-properties.name: "3-1 節：總覽變更版本資料"
+    main.commit-backtrace.name: "3-2 節：變更版本構成歷史"
   ondisk:
   # level configs of section one: intro
     intro-install: "intro-install.yaml"
@@ -41,4 +42,5 @@ asset_index:
 
   # level configs of section three: elaborate commits
     commit-properties: "commit-properties.yaml"
+    commit-backtrace: "commit-backtrace.yaml"
     
