Update course content

--- a/example/course-resources/fork/level-data/commit-backtrace-index.yaml
+++ b/example/course-resources/fork/level-data/commit-backtrace-index.yaml
@@ -11,7 +11,7 @@ asset_index:
 
     notify-commit-parent: |+2
       .md
-      請使用${{t/gui}}開啟位於「`#{{basic}}`」的資料夾  
+      請使用${{t/gui}}開啟位於「`#{{commits-advanced}}`」的資料夾  
       並且切換到${{t/graph}}頁面，應該會看到如下圖的${{t/revision}}資訊頁面  
 
       ![illustration]({{images/illustrate-mark-commit-parent}})  
@@ -36,10 +36,10 @@ asset_index:
       <div class="img-title">圖(二)</div>  
 
       從上圖(二)可見  
-      我們用橘色框線圈選目前 GUI 上選中的${{t/revision}}的${{t/hash}}  
+      我們用橘色框線圈選**目前 GUI 上選中的${{t/revision}}**的${{t/hash}}  
       同時在線圖上或是資訊頁面上都有一樣的${{t/hash}}  
 
-      然後，我們用紅色框線圈選被選中的${{t/revision}}的父母變更版本  
+      然後，我們用紅色框線圈選被選中的**${{t/revision}}的父母變更版本**  
       紅色框線的範圍在變更提交的資訊頁面上如同圖(一)一樣  
       而在線圖上，我們會發現紅色框線選出來的${{t/revision}}，恰恰好是位在橘色框線下面  
 
@@ -48,7 +48,7 @@ asset_index:
       請回憶當我們增加新的${{t/revision}}的時候  
       最新的版本總是會位在線圖的**最上面**  
 
-      也就是說，越老的版本，位在線圖的越下方；越新的版本，則位在越上方  
+      也就是說，**越老的版本，位在線圖的越下方；越新的版本，則位在越上方**  
       因此，前面圖(二)的紅色框線選中的${{t/revision}}比橘色框線選中的${{t/revision}}老  
       更準確的說，前者是後者的成長基礎，是後者的「父母」  
       因此，才得這樣的名字  
@@ -62,11 +62,11 @@ asset_index:
       ![illustration]({{images/illustrate-commit-parent-child-pairs}})  
       <div class="img-title">圖(三)</div>  
 
-      首先我們從圖(三)可以看到幾個兩兩一組上下排列的圓球  
+      首先我們從圖(三)可以看到幾個兩兩一組被黑線連接且上下排列的圓球  
       按照往例，圓球就代表了${{t/revision}}  
-      而上下排列的圓球，代表了一對親子${{t/revision}}  
+      而一組上下排列的圓球，代表了一對親子${{t/revision}}  
       
-      每一隊親子${{t/revision}}中  
+      每一對親子${{t/revision}}中  
       位在上面的代表子，而位在下面的代表親  
       中間的黑線，則表示因為子上面紀錄了親的${{t/hash}}，所以產生了連結  
 
@@ -79,13 +79,13 @@ asset_index:
       <div class="img-title">圖(四)</div>  
 
       圖(四)的左側其實和剛才的圖(三)完全一樣  
-      從圖(三)裡面，我們以紅色和橘色框線選出了其中特別的兩組親子${{t/revision}}  
+      在這裡，我們以紅色和綠色框線選出了其中特別的兩組親子${{t/revision}}  
       
       紅色框線選中的組合中，父母${{t/revision}}(位於下面)是綠色的  
-      而橘色框線選中的組合中，則是子${{t/revision}}(位於上面)是綠色的  
+      而綠色框線選中的組合中，則是子${{t/revision}}(位於上面)是綠色的  
 
       按照之前的慣例，同樣顏色的圓圈其實代表了同一個${{t/revision}}  
-      所以如果我們把這兩組親子${{t/revision}}共通的綠色${{t/revision}}疊合起來  
+      所以如果我們把這兩組親子${{t/revision}}**共通的綠色**${{t/revision}}疊合起來  
       就會形成圖(四)右邊的「三代同堂」的景象  
 
       在圖(四)右側，我們可以看見有三個${{t/revision}}  
