--- a/example/course-resources/fork/level-data/commit-properties-index.yaml
+++ b/example/course-resources/fork/level-data/commit-properties-index.yaml
@@ -106,10 +106,9 @@ asset_index:
       .md
       前面我們介紹了幾種可以描述一個${{t/commit}}的資訊  
       但是沒有任何一項是獨一無二的  
+      例如現在我們就可以看到${{t/graph}}上面有兩個${{t/revision}}的訊息都是${{level-data/commit-properties/short-message}}  
 
-      也就是說，有可能有兩個以上的${{t/commit}}  
-      他們的作者、建立時間或是提交訊息會重複  
-      通常這並不會造成困擾  
+      通常提交訊息發生重複並不會造成困擾  
       但有些時候我們無可避免需要每一個${{t/commit}}有一種獨一無二的方式來識別他們  
       例如有一天我們需要跟別人說「我改了一個檔案，你可以在**那一個**${{t/revision}}找到他」  
       我們要如何指稱「那一個」呢？  
