Add new level: commit-diff

--- a/example/course-resources/fork/images-index.yaml
+++ b/example/course-resources/fork/images-index.yaml
@@ -89,9 +89,12 @@ asset_index:
     illustrate-hash-display: commit-properties@illustrate-hash-display.png
     illustrate-gui-search-commit: commit-properties@illustrate-gui-search-commit.png
 
-#commit-backtrace
+# commit-backtrace
     illustrate-mark-commit-parent: commit-backtrace@illustrate-mark-commit-parent.png
     illustrate-mark-commit-parent-with-graph: commit-backtrace@illustrate-mark-commit-parent-with-graph.png
     illustrate-commit-parent-child-pairs: commit-backtrace@illustrate-commit-parent-child-pairs.png
     illustrate-connect-grand-parent: commit-backtrace@illustrate-connect-grand-parent.png
     illustrate-commit-sequence: commit-backtrace@illustrate-commit-sequence.png
+
+# commit-diff
+    illustrate-mark-commit-diff-gui: commit-diff@illustrate-mark-commit-diff-gui.png
