--- a/example/course-resources/fork/levels-index.yaml
+++ b/example/course-resources/fork/levels-index.yaml
@@ -24,6 +24,7 @@ asset_index:
   # level names of section three
     main.commit-properties.name: "3-1 節：總覽變更版本資料"
     main.commit-backtrace.name: "3-2 節：變更版本構成歷史"
+    main.commit-diff.name: "3-3 節：觀察變更版本之間的差異"
   ondisk:
   # level configs of section one: intro
     intro-install: "intro-install.yaml"
@@ -43,4 +44,5 @@ asset_index:
   # level configs of section three: elaborate commits
     commit-properties: "commit-properties.yaml"
     commit-backtrace: "commit-backtrace.yaml"
+    commit-diff: "commit-diff.yaml"
     
