Adjust json schema to adapt to new format of moveFile action params

--- a/example/course-resources/fork/levels/commit-properties.yaml
+++ b/example/course-resources/fork/levels/commit-properties.yaml
@@ -104,8 +104,8 @@
 
       #  commit, for observing difference 3
         - !act.moveFile 
-          sourcePath: "$level-data/commit-properties/file-2-name"
-          targetPath: "$level-data/commit-properties/file-2-name-2"
+          sourcePaths: ["$level-data/commit-properties/file-2-name"]
+          targetPaths: ["$level-data/commit-properties/file-2-name-2"]
         - *stageAll
         - !dev.act.git 
           repoSetupName: commits-advanced 
